# dto/pvc_dto.go
@@ -1,0 +1,8 @@
+package dto
+
+type PVC struct {
+	Name      string `json:"name" example:"my-pvc"`
+	Namespace string `json:"namespace" example:"default"`
+	Status    string `json:"status" example:"Bound"`
+	Size      string `json:"size" example:"1Gi"`
+}
